--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".View.MainActivity"
         android:label="@string/app_name"
             android:configChanges="orientation"
             android:screenOrientation="portrait">
